// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> should call function 1`] = `
<MessageInput
  onSend={[Function]}
>
  <div
    className="message-input"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        autoComplete="off"
        autoFocus={true}
        onChange={[Function]}
        placeholder="Type a message"
        type="text"
        value=""
      />
      <button
        type="submit"
      >
        <i
          className="fab fa-telegram-plane"
        />
      </button>
    </form>
  </div>
</MessageInput>
`;

exports[`<MessageInput /> should render properly 1`] = `
<div
  className="message-input"
>
  <form
    onSubmit={[Function]}
  >
    <input
      autoComplete="off"
      autoFocus={true}
      onChange={[Function]}
      placeholder="Type a message"
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      <i
        className="fab fa-telegram-plane"
      />
    </button>
  </form>
</div>
`;
